added user update endpoint
